# golang-rs

./: Cargo.toml  README.md
golang-const-decl/: README.md
golang-const-decl/golang-const-decl/: Cargo.toml
golang-const-decl/golang-const-decl-core/: Cargo.toml
golang-const-decl/golang-const-decl-macro/: Cargo.toml  README.md
golang-parser/: Cargo.toml  README.md
golang-parser/src/: lib.rs
golang-struct-tag/: Cargo.toml  README.md
golang-struct-tag/src/: convention_struct_tag_parser.rs  error.rs  json.rs  lib.rs  struct_tag.rs  struct_tag_parser.rs
golang-struct-tag/src/convention/: json.rs  mod.rs
golang-struct-tag/src/grammars/: convention_struct_tag.pest  struct_tag.pest
golang-struct-tag/tests/: json.rs
golang-struct-tag/tests/files/: json.go  json.txt  json_gen.sh
golang-type/: Cargo.toml  README.md
golang-type-decl/: Cargo.toml
golang-type-decl/golang-type-decl/: Cargo.toml
golang-type-decl/golang-type-decl-core/: Cargo.toml  README.md
golang-type-decl/golang-type-decl-core/src/: alias_decl.rs  type_def.rs
golang-type-decl/golang-type-decl-core/src/alias_decl/: type_alias.rs
golang-type-decl/golang-type-decl-core/src/type_def/: json_struct.rs  json_struct_def.rs
golang-type-decl/golang-type-decl-core/tests/: alias_decl.rs  type_def.rs
golang-type-decl/golang-type-decl-core/tests/files/: simple.go
golang-type-decl/golang-type-decl-macro/: Cargo.toml  README.md
golang-type-decl/golang-type-decl-macro/src/: lib.rs  utils.rs
golang-type-decl/golang-type-decl-macro/src/gen_json_struct/: field_opts.rs  field_types.rs  input.rs  mod.rs
golang-type-decl/golang-type-decl-macro/src/gen_type_alias/: input.rs  mod.rs
golang-type-decl/golang-type-decl-macro/src/json_struct/: mod.rs  output.rs
golang-type-decl/golang-type-decl/src/: gen_json_struct.rs  gen_type_alias.rs  lib.rs
golang-type-decl/golang-type-decl/tests/: gen_json_struct.rs  gen_json_struct_from_file.rs  gen_type_alias.rs  gen_type_alias_from_file.rs  macro_json_struct.rs
golang-type-decl/golang-type-decl/tests/files/: simple.go
golang-type-decl/src/: alias_decl.rs  lib.rs  type_def.rs
golang-type-decl/tests/: alias_decl.rs  type_def.rs
golang-type-decl/tests/files/: simple.go
golang-type-name/: Cargo.toml  README.md
golang-type-name-test/: Cargo.toml
golang-type-name-test/src/: lib.rs
golang-type-name-test/tests/: test.rs
golang-type-name/golang-type-name/: Cargo.toml
golang-type-name/golang-type-name-core/: Cargo.toml  README.md
golang-type-name/golang-type-name-core/src/: lib.rs
golang-type-name/golang-type-name-core/tests/files/: type_names_gen.sh
golang-type-name/golang-type-name-macro/: Cargo.toml
golang-type-name/golang-type-name-macro/src/: lib.rs
golang-type-name/golang-type-name/src/: lib.rs
golang-type-name/golang-type-name/tests/: gen_type_name.rs  macro.rs
golang-type-name/src/: lib.rs
golang-type-name/tests/files/: type_names.go  type_names.txt  type_names_gen.sh
golang-type-test/: Cargo.toml
golang-type-test/src/: lib.rs
golang-type-test/tests/: test.rs
golang-type/golang-type/: Cargo.toml
golang-type/golang-type-core/: Cargo.toml
golang-type/golang-type-core/src/: array_type.rs  channel_type.rs  function_type.rs  interface_type.rs  lib.rs  map_type.rs  parenthesized_type.rs  pointer_type.rs  slice_type.rs  struct_type.rs
golang-type/golang-type-core/tests/: array_type.rs  map_type.rs  parenthesized_type.rs  slice_type.rs  struct_type.rs
golang-type/golang-type-core/tests/files/: array_type.txt  map_type.go  map_type.txt  slice_type.go  slice_type_gen.sh
golang-type/golang-type-core/tests/files/struct_type/: embedded_field.go  tag.go
golang-type/golang-type-macro/: Cargo.toml  README.md
golang-type/golang-type-macro/src/: lib.rs
golang-type/golang-type/src/: lib.rs
golang-type/golang-type/tests/: gen_type.rs  macro.rs  test.rs
golang-type/src/: array_type.rs  channel_type.rs  function_type.rs  interface_type.rs  lib.rs  map_type.rs  parenthesized_type.rs  pointer_type.rs  slice_type.rs  struct_type.rs
golang-type/tests/: array_type.rs  map_type.rs  parenthesized_type.rs  slice_type.rs  struct_type.rs
golang-type/tests/files/: array_type.go  array_type_gen.sh  map_type_gen.sh  slice_type.txt
golang-type/tests/files/struct_type/: embedded_field.txt  gen.sh  normal.go  normal.txt  tag.txt
golang-var-decl/golang-var-decl/: Cargo.toml  README.md
golang-var-decl/golang-var-decl-core/: Cargo.toml  README.md
golang-var-decl/golang-var-decl-macro/: Cargo.toml
