[workspace]
members = [
    "golang-const-decl",
    "golang-parser",
    "golang-struct-tag",
    "golang-type/golang-type",
    "golang-type/golang-type-core",
    "golang-type/golang-type-macro",
    "golang-type-decl",
    "golang-type-name",
    "golang-type-name-test",
    "golang-type-test",
    "golang-var-decl",
]
