[workspace]
members = [
    "golang-const-decl/golang-const-decl",
    "golang-parser",
    "golang-struct-tag",
    "golang-type/golang-type",
    "golang-type/golang-type-core",
    "golang-type/golang-type-macro",
    "golang-type-decl",
    "golang-type-name/golang-type-name",
    "golang-type-name/golang-type-name-core",
    "golang-type-name/golang-type-name-macro",
    "golang-var-decl/golang-var-decl",
]
