[workspace]
members = [
    "golang-const-decl/golang-const-decl",
    "golang-const-decl/golang-const-decl-core",
    "golang-const-decl/golang-const-decl-macro",
    "golang-parser",
    "golang-struct-tag",
    "golang-type/golang-type",
    "golang-type/golang-type-core",
    "golang-type/golang-type-macro",
    "golang-type-decl/golang-type-decl",
    "golang-type-decl/golang-type-decl-core",
    "golang-type-decl/golang-type-decl-macro",
    "golang-type-name/golang-type-name",
    "golang-type-name/golang-type-name-core",
    "golang-type-name/golang-type-name-macro",
    "golang-var-decl/golang-var-decl",
    "golang-var-decl/golang-var-decl-core",
    "golang-var-decl/golang-var-decl-macro",
]
