[package]
name = "golang-parser"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Golang Parser"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/golang-rs"
homepage = "https://github.com/bk-rs/golang-rs"
documentation = "https://docs.rs/golang-parser"
keywords = []
categories = []
readme = "README.md"

[dependencies]
tree-sitter = { version = "~0.17", default-features = false }
tree-sitter-go = { version = "~0.16", default-features = false } 

thiserror = { version = "1.0", default-features = false }
