[package]
name = "golang-struct-tag"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Golang Struct Tag"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/golang-rs"
homepage = "https://github.com/bk-rs/golang-rs"
documentation = "https://docs.rs/golang-struct-tag"
keywords = []
categories = []
readme = "README.md"

[dependencies]
golang-parser = { version = "~0.1", path = "../golang-parser" } 

pest = { version = "2.1", default-features = false }
pest_derive = { version = "2.1", default-features = false }

thiserror = { version = "1.0", default-features = false }
