[package]
name = "golang-type-name-test"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
golang-type-name = { version = "0.0", path = "../golang-type-name" }

proc-macro2 = { version = "1.0", default-features = false }
syn = { version = "1.0", default-features = false, features = ["full"] }
quote = { version = "1.0", default-features = false }

[dev-dependencies]
num-complex = { version = "0.4", default-features = false }
