[package]
name = "golang-type-name"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Golang TypeName"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/golang-rs"
homepage = "https://github.com/bk-rs/golang-rs"
documentation = "https://docs.rs/golang-type-name"
keywords = []
categories = []
readme = "README.md"

[dependencies]
thiserror = { version = "1.0", default-features = false }
