[package]
name = "golang-type-decl"
version = "0.3.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Golang Type Decl"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/golang-rs"
homepage = "https://github.com/bk-rs/golang-rs"
documentation = "https://docs.rs/golang-type-decl"
keywords = []
categories = []
readme = "README.md"

[dependencies]
golang-type-decl-core = { version = "=0.3.0", features = ["enable-quote-to_tokens"], path = "../golang-type-decl-core" }
golang-type-decl-macro = { version = "=0.3.0", path = "../golang-type-decl-macro" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-aux = { version = "2.2" }
