[package]
name = "golang-type-name-core"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Golang TypeName Core"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/golang-rs"
homepage = "https://github.com/bk-rs/golang-rs"
documentation = "https://docs.rs/golang-type-name-core"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
features = ["enable-quote-to_tokens"]

[features]
default = []
enable-quote-to_tokens = ["proc-macro2", "quote"]

[dependencies]
golang-parser = { version = "~0.1", path = "../../golang-parser" }

thiserror = { version = "1.0", default-features = false }

proc-macro2 = { version = "1.0", default-features = false, optional = true }
quote = { version = "1.0", default-features = false, optional = true }
