[package]
name = "golang-type-name"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Golang TypeName"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/golang-rs"
homepage = "https://github.com/bk-rs/golang-rs"
documentation = "https://docs.rs/golang-type-name"
keywords = []
categories = []
readme = "README.md"

[dependencies]
golang-type-name-core = { version = "0.0", path = "../golang-type-name-core" }
golang-type-name-macro = { version = "0.0", path = "../golang-type-name-macro" }

[dev-dependencies]
num-complex = { version = "0.4", default-features = false }
