[package]
name = "golang-var-decl-macro"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Golang Var Decl Macro"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/golang-rs"
homepage = "https://github.com/bk-rs/golang-rs"
documentation = "https://docs.rs/golang-var-decl-macro"
keywords = []
categories = []
readme = "README.md"

[dependencies]
